--- a/CSS/GlobalStyle.css
+++ b/CSS/GlobalStyle.css
@@ -1,9 +1,12 @@
-body{
+html,body{
     height: 100%;
+    margin:0;
+    padding:0;
 }
 
 /* Top Navbar Styling */
 .navbar {
+    position: fixed;
     background-color: transparent;
     background: transparent;
     border-color: transparent;
@@ -14,9 +17,19 @@ body{
     font-size: 30px;
  }
 
+ .main-content{
+    padding:10px;
+    padding-bottom:60px;  
+ }
+
+ #body-container {
+    min-height:100%;
+    position:relative;
+ }
+
 /* Footer Styling */
  .footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 50px;
